maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:42: error: not found: value SommeAngle
        if (SommeAngle!=0){
            ^